A really broken setup which somehow can query solr and display docs from default query. fun!!

--- a/MusicFormats/src/main/resources/docker/website/style.css
+++ b/MusicFormats/src/main/resources/docker/website/style.css
@@ -149,7 +149,7 @@ section img {
 section p {
   color: yellow;
   background: black;
-  width: 50px;
+  /*width: 50px;*/
   height: 50px;
   line-height: 50px;
   text-align: center;
