--- a/MusicFormats/src/main/resources/docker/website/style.css
+++ b/MusicFormats/src/main/resources/docker/website/style.css
@@ -2,7 +2,7 @@
 
 html {
   font-family: 'Raleway', sans-serif;
-  background-color: yellow;
+  background-color: rgb(115, 211, 255);
   font-size: 10px;
 }
 
@@ -27,13 +27,13 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  color: yellow;
+  color: #6363ff;
   text-align: right;
-  width: 160px;
+  /*width: 160px;*/
   position: absolute;
   right: 4%;
   z-index: 3000;
-  text-shadow: 2px 2px 1px black;
+  text-shadow: 2px 2px 1px rgb(b3, b3, b3);
   line-height: 2rem;
   padding-top: 0.3rem;
 }
@@ -105,10 +105,14 @@ select, input, button {
   width: 100%;
 }
 
+select {
+  color:#6363ff
+}
+
 input {
   background: black;
   box-shadow: inset 1px 1px 1px white;
-  color: yellow;
+  color: #6363ff;
   border: none;
   padding: 5px;
   width: 201.5px;
@@ -116,7 +120,7 @@ input {
 
 button {
   background: black;
-  color: yellow;
+  color: #6363ff;
   padding: 5px 0;
   border: none;
   border-radius: 10px;
@@ -134,7 +138,7 @@ main {
 section {
   width: 45%;
   margin: 5px;
-  background-color: black;
+  background-color: rgb(235, 235, 235);
   position: relative;
   height: 215px;
 }
@@ -147,14 +151,14 @@ section img {
 }
 
 section p {
-  color: yellow;
-  background: black;
-  /*width: 50px;*/
-  height: 50px;
-  line-height: 50px;
+  color: blue;
+  background: #b0b0b0;
+  /* width: 50px; */
+  /* height: 50px; */
+  /* line-height: 50px; */
   text-align: center;
-  border-radius: 50%;
-  box-shadow: 2px 2px 1px yellow;
+  /* border-radius: 50%; */
+  box-shadow: 2px 2px 1px rgb(0, 29, 110);
   position: absolute;
   right: 10px;
   bottom: -6px;
